feat: simple cli test, add --release, --enable-preview, --line-length, --verbose and extra docs to cli